# rust-demo-chat

./: .gitignore  Cargo.toml  Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js
.cargo/: config.toml
assets/: styles.css
src/: auth.rs  chat.rs  error.rs  main.rs  utils.rs
src/chat/: channels.rs  error.rs  live_messages.rs  mod.rs  servers.rs
src/chat/messages/: live.rs  mod.rs
src/chat/servers/settings/: general.rs  members.rs  mod.rs
src/servers/: mod.rs
src/servers/channels/: mod.rs
src/servers/channels/messages/: live.rs  mod.rs
src/servers/settings/: general.rs  members.rs  mod.rs
src/users/: friends.rs  mod.rs  profile.rs
