[package]
name = "rust-demo-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["form", "tracing"] }
axum-htmx = "0.6.0"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
  "postgres",
  "runtime-tokio",
  "time",
  "uuid",
] }
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v7", "fast-rng"] }
