[package]
name = "rust-demo-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["form", "tracing"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
axum-htmx = "0.6.0"
chrono = "0.4.38"
maud = { version = "0.26.0", features = ["axum"] }
relativetime = { version = "0.1.4", features = ["chrono"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
  "postgres",
  "runtime-tokio",
  "chrono",
  "uuid",
] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tokio-stream = "0.1.15"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v7", "fast-rng"] }
